# getoptsargs

./: .gitignore  Cargo.toml  LICENSE-MIT  NEWS.md  README.md
.github/workflows/: doc.yml  lint.yml  test.yml
examples/: async.rs  everything.rs  imperative.rs  minimal.rs
src/: args.rs  errors.rs  lib.rs  licenses.rs  opts.rs  prelude.rs  run.rs  testutils.rs
tests/: integration_test.rs
